@@ -1,10 +1,10 @@
 LXPanel is a lightweight X11 desktop panel.
 
 To build this program you need some development packages:
-  libtool 2.2 or newer, intltool, libgtk 2.18 or newer, libmenu-cache,
+  libtool 2.2 or newer, intltool, libgtk 2.18 or newer,
   libfm-gtk 1.2 or newer, wireless-tools, libxml-2.0, libwnck.
 Optional development packages may be required to build some modules:
-  libalsasound, libindicator 0.3.0.
+  libmenu-cache, libalsasound, libindicator 0.3.0.
 
 To install this program, three other packages are needed:
   menu-cache, libfm-gtk, lxmenu-data.
